@@ -17,6 +17,9 @@ module Devise
     # inside the given class.
     #
     def self.config(mod, *accessors) #:nodoc:
+      (class << mod; self; end).send :attr_accessor, :available_configs
+      mod.available_configs = accessors
+
       accessors.each do |accessor|
         mod.class_eval <<-METHOD, __FILE__, __LINE__ + 1
           def #{accessor}
@@ -46,13 +49,29 @@ module Devise
     #
     def devise(*modules)
       include Devise::Models::Authenticatable
-      options = modules.extract_options!
+      options = modules.extract_options!.dup
+
       self.devise_modules += modules.map(&:to_sym).uniq.sort_by { |s|
         Devise::ALL.index(s) || -1  # follow Devise::ALL order
       }
 
       devise_modules_hook! do
-        devise_modules.each { |m| include Devise::Models.const_get(m.to_s.classify) }
+        devise_modules.each do |m|
+          mod = Devise::Models.const_get(m.to_s.classify)
+          include mod
+
+          if mod.const_defined?("ClassMethods")
+            class_mod = mod.const_get("ClassMethods")
+            if class_mod.respond_to?(:available_configs)
+              available_configs = class_mod.available_configs
+              available_configs.each do |config|
+                next unless options.key?(config)                
+                send(:"#{config}=", options.delete(config))
+              end
+            end
+          end
+        end
+
         options.each { |key, value| send(:"#{key}=", value) }
       end
     end
